ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reverse-words
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  rules:
  - host: user1-reversewords-prod.apps.cluster-santiago-7eb7.santiago-7eb7.example.opentlc.com
    http:
      paths:
      - backend:
          serviceName: reverse-words
          servicePort: http
